# pixel_engine

./: CMakeLists.txt  README.md  pixel_engine.code-workspace
src/application/: main.c
src/application/game_loop/: game_loop.c  game_loop.h
src/engine/cleanup/: cleanup.c  cleanup.h
src/engine/globals/: globals.c  globals.h
src/engine/initialize/: initialize.c  initialize.h
src/engine/shaders/: compile.sh
src/unused/: main.c  main.h
